<resources>
    <string name="app_name">Pet Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="inbox">Inbox</string>
    <string name="my_profile">My profile</string>
    <string name="text_screen">Create an account and access thousand\nof cool stuffs</string>

    <string name="heading_one">Welcome To Pet Booking</string>
    <string name="heading_two">Increase Sales</string>
    <string name="heading_three">Save Time And Money</string>
    <string name="heading_fourth">Booking Anywhere</string>

    <string name="desc_one">Application for pets. The most appropriate choice for pets in the house.</string>
    <string name="desc_two">At the same time, the customers in the pet service business also have a chance to boost revenue and increase the number of customers when becoming a partner with Pet Booking.</string>
    <string name="desc_three">With Pet Booking, pet owners can save time and money on clinic/spa/hotel booking and pet transporting.</string>
    <string name="desc_fourth">With the advance of technology, pet care should be combined with modern techniques to come up with the best service experience to everyone.</string>

    <string name="forget_password_detail">Provide your account`s email for which you want\nto reset your password! </string>
    <string name="login">Login</string>
    <string name="tv_bio">PearUK is Le Anh Quoc 🍐🍐\nStanding at airport Waiting for train 🚂 ✈️</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="count">%1$d</string>
    <string name="pets">Pets</string>
    <string name="friends">Friends</string>
    <string name="about_me">About me</string>
    <string name="edit">Edit</string>
    <string name="birth_date">Birth date:</string>
    <string name="my_birth">20 Oct 2002</string>
    <string name="gender_">Gender:</string>
    <string name="male">Male</string>
    <string name="tv_description">As an animal lover, I like to believe that the love we feel for animals is unconditional 💕 🐕 🐈 🌸</string>
    <string name="gallery">Gallery</string>
    <string name="item_1">Item 1</string>
    <string name="requests">Requests</string>
    <string name="hello_1_s">Hello, %1$s!</string>
    <string name="make_somethings_great">Make somethings great:</string>
    <string name="everyday_s_quote">Everyday\'s Quote:</string>
    <string name="quote">"Design is not just what it looks like and feels like. Design is how it works."</string>
    <string name="people">People</string>
    <string name="title_activity_create_info_pet">CreateInfoPetActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="dot">•</string>
    <string name="weight">Weight:</string>
    <string name="weight_value">%1$.2f kg</string>
    <string name="height">Height:</string>
    <string name="height_value">%1$.2f cm</string>
    <string name="write_a_message">Write a message...</string>
    <string name="months">months</string>
    <string name="species_age">%1$s ∙ %2$.2f</string>
    <string name="gender">Gender</string>
    <string name="about_pet">About pet</string>
    <string name="color">Color:</string>
    <string name="color_value">%1$s</string>
    <string name="pet_behavior">Pet\'s behavior</string>
    <string name="pet_gallery">Pet\'s Gallery</string>
    <string name="mail">petbooking@gmail.com</string>
</resources>