<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_background_pet_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/pet2"
            app:layout_constraintDimensionRatio="1:0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_baseline_circle_24"
            android:importantForAccessibility="no"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back_imgbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pet_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_background_pet_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_background_pet_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_pet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_1"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_pet_species_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/species_age"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@id/iv_pet_gender"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/tv_pet_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_pet_name" />

                <ImageView
                    android:id="@+id/iv_pet_gender"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/gender"
                    android:scaleType="centerCrop"
                    android:src="@drawable/male_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_ic_about_pet"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_pets_24"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/cv_pet_info"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_about_pet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/about_pet"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_ic_about_pet"
            app:layout_constraintStart_toEndOf="@id/iv_ic_about_pet"
            app:layout_constraintTop_toTopOf="@id/iv_ic_about_pet" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_pet_weight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_pet_height"
            app:layout_constraintEnd_toStartOf="@id/cv_pet_height"
            app:layout_constraintStart_toStartOf="@id/iv_ic_about_pet"
            app:layout_constraintTop_toTopOf="@id/cv_pet_height"
            app:strokeColor="@color/gray_border"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_pet_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_value"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_pet_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/tv_pet_description"
            app:layout_constraintEnd_toStartOf="@id/cv_pet_color"
            app:layout_constraintStart_toEndOf="@id/cv_pet_weight"
            app:layout_constraintTop_toBottomOf="@id/iv_ic_about_pet"
            app:strokeColor="@color/gray_border"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_pet_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_value"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_pet_color"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_pet_height"
            app:layout_constraintEnd_toEndOf="@id/cv_pet_info"
            app:layout_constraintStart_toEndOf="@id/cv_pet_height"
            app:layout_constraintTop_toTopOf="@id/cv_pet_height"
            app:strokeColor="@color/gray_border"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_pet_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_value"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_pet_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_description"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="@id/cv_pet_info"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/cv_pet_height" />

        <View
            android:id="@+id/v_line_about"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray_border"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_description" />

        <ImageView
            android:id="@+id/iv_ic_pet_behavior"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_auto_awesome_24"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/v_line_about"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_pet_behavior"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/pet_behavior"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_ic_pet_behavior"
            app:layout_constraintStart_toEndOf="@id/iv_ic_pet_behavior"
            app:layout_constraintTop_toTopOf="@id/iv_ic_pet_behavior" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_pet_behavior"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cv_pet_info"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_behavior" />

        <View
            android:id="@+id/v_line_behavior"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray_border"
            app:layout_constraintTop_toBottomOf="@id/chipGroup_pet_behavior" />

        <ImageView
            android:id="@+id/iv_ic_pet_gallery"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_image_24"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/v_line_behavior"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_pet_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/pet_gallery"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_ic_pet_gallery"
            app:layout_constraintStart_toEndOf="@id/iv_ic_pet_gallery"
            app:layout_constraintTop_toTopOf="@id/iv_ic_pet_gallery" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pet_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cv_pet_info"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_gallery"
            app:spanCount="3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>