<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InboxActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/message_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCFFFFFF"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_arrow_back_imgbtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inbox"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:layout_constraintEnd_toStartOf="@id/date_time"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="@id/name" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/about_me"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:layout_constraintStart_toEndOf="@id/dot"
                app:layout_constraintTop_toTopOf="@id/name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/message_card"
        app:layout_constraintVertical_bias="1"
        tools:itemCount="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                style="@style/MyDenseOutlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeColor="@color/gray_border"
                app:boxStrokeWidth="1dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/write_a_message"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/send"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@android:color/transparent"
                android:importantForAccessibility="no"
                android:paddingHorizontal="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_round_send_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_input_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/bold_green" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>